# lla

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  plugins.md
.github/workflows/: ci.yml  release.yml
completions/: _lla  lla.bash  lla.elv  lla.fish  lla.ps1
lla/: Cargo.toml  README.md
lla/src/: error.rs
lla/src/commands/: args.rs  command_handler.rs  file_utils.rs
lla/src/config/: mod.rs
lla/src/formatter/: csv.rs  fuzzy.rs  grid.rs  json.rs  long.rs  mod.rs  serializable.rs  sizemap.rs  table.rs
lla/src/lister/: archive.rs  fuzzy.rs  mod.rs
lla/src/sorter/: alphabetical.rs  date.rs  mod.rs  size.rs
lla/src/theme/: mod.rs
lla_plugin_interface/: Cargo.toml
lla_plugin_utils/: Cargo.toml  README.md
plugins/categorizer/: Cargo.toml  README.md
plugins/code_complexity/: Cargo.toml  README.md
plugins/code_snippet_extractor/: Cargo.toml  README.md
plugins/dirs_meta/: Cargo.toml  README.md
plugins/duplicate_file_detector/: README.md
plugins/file_copier/: Cargo.toml  README.md
plugins/file_hash/: README.md
plugins/file_meta/: README.md
plugins/file_mover/: Cargo.toml  README.md
plugins/file_organizer/: Cargo.toml  README.md
plugins/file_organizer/src/: config.rs  lib.rs
plugins/file_organizer/src/strategies/: date.rs  extension.rs  mod.rs  size.rs  type.rs
plugins/file_remover/: Cargo.toml  README.md
plugins/file_tagger/: README.md
plugins/git_status/: README.md
plugins/keyword_search/: README.md
plugins/last_git_commit/: Cargo.toml  README.md
plugins/sizeviz/: Cargo.toml  README.md
themes/: README.md
(+8 files in other folders)
