[package]
name = "file_organizer"
version = "0.1.0"
edition = "2021"
description = "A plugin for lla that organizes files using various strategies"

[lib]
crate-type = ["cdylib"]

[dependencies]
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
colored = "2.0"
lazy_static = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
